# SmartCalcV2.0

./: CMakeLists.txt  Makefile  README.md  SmartCalc.pro
controller/: controller.cc  controller.h
docs/: Doxyfile
model/: calculation.cc  loan_calculator.cc  model.h  polish_notation.cc  s21_stack.h  support_methods.cc
tests/: test_loan_calculator.cc  test_polish_notation.cc
view/: form.cc  form.h  form.ui  loancalc.cc  loancalc.h  loancalc.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  plot.cc  plot.h  plot.ui
